Change colors to use gradient color names